--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "node server/index.js"
+		"dev": "node --watch server/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.18.2"
+		"@apollo/server": "^4.7.0",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"graphql": "^16.6.0",
+		"graphql-tag": "^2.12.6"
 	}
 }
